--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "es6-promise": "^4.2.8",
     "vue": "^2.6.11",
     "vuex": "^3.5.1"
   },
