--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "es6-promise": "^4.2.8",
+    "jspdf": "^1.5.3",
     "vue": "^2.6.11",
     "vuex": "^3.5.1"
   },
