--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "es6-promise": "^4.2.8",
+    "html2canvas": "^1.0.0-rc.5",
     "jspdf": "^1.5.3",
     "vue": "^2.6.11",
+    "vue-keep-scroll-position": "^0.1.2",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
